refactor: changed entity OperationType for Operation
